@@ -1,7 +1,0 @@
-using System.CodeDom.Compiler;
-
-namespace cYo.Projects.ComicRack.Viewer.Remote
-{
-	[GeneratedCode("wsdl", "2.0.50727.1432")]
-	public delegate void SubmitReportCompletedEventHandler(object sender, SubmitReportCompletedEventArgs e);
-}
